@@ -614,11 +614,14 @@
 			</Condition>
 		</Section>
 		<Section id="SourceCode" _label="Source Code">
-			<Condition id="ItemType" value="DotNetProject">
-				<Section id="DotNetNamingPolicies" _label=".NET Naming Policies">
+			<Section id="DotNetNamingPolicies" _label=".NET Naming Policies">
+				<Condition id="ItemType" value="Solution">
 					<Panel id = "NamespaceSynchronisationPanel" class = "MonoDevelop.Ide.Projects.OptionPanels.NamespaceSynchronisationPanel" />
-				</Section>
-			</Condition>
+				</Condition>
+				<Condition id="ItemType" value="SolutionItem">
+					<Panel id = "NamespaceSynchronisationPanel" class = "MonoDevelop.Ide.Projects.OptionPanels.NamespaceSynchronisationPanel" />
+				</Condition>
+			</Section>
 			<Condition id="ItemType" value="Solution">
 				<Section id="CodeFormattingPolicies" _label="Code Formatting" icon="md-formatting" fill = "true" class="MonoDevelop.Ide.Projects.OptionPanels.CodeFormattingPanel" />
 			</Condition>
